# Rust-React-Template

./: .gitignore  README.md  package-lock.json  package.json
react-vite-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
react-vite-frontend/src/: index.css  main.tsx
react-vite-frontend/src/components/: AiToolComponent.tsx  AiToolForm.tsx  AiTools.tsx  AiToolsContainer.tsx  AiToolsList.tsx  App.tsx  ExampleDataComponent.tsx
react-vite-frontend/src/components/ui/: button.tsx
react-vite-frontend/src/types/: index.ts
rust-backend/: Cargo.toml  ai_tools.db  diesel.toml
rust-backend/migrations/: .keep
rust-backend/migrations/2023-10-10-000000_add_unique_constraint_to_ai_tools/: down.sql  up.sql
rust-backend/migrations/2025-03-02-151333_create_posts/: up.sql
rust-backend/migrations/2025-03-02-151949_create_ai_tools/: down.sql  up.sql
rust-backend/migrations/2025-03-03-082442_martial-arts/: down.sql  up.sql
rust-backend/migrations/2025-03-03-152649_make_id_non_nullable/: down.sql  up.sql
rust-backend/src/: db_utils.rs  main.rs  models.rs  schema.rs
rust-backend/src/routes/: mod.rs
